Fix card image overlaps borders

--- a/features/users/ui/card/card.module.css
+++ b/features/users/ui/card/card.module.css
@@ -7,14 +7,10 @@
     position: relative;
     border: 2px solid var(--color-accent2);
     transition: all .2s ease-in-out;
+    overflow: hidden;
 
     &:hover {
         border-color: var(--color-secondary);
-    }
-
-    &__image {
-        border-top-left-radius: .5rem;
-        border-bottom-left-radius: .5rem;
     }
 
     &__content {
